--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-auth": "^4.12.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-latex-next": "^2.2.0",
     "react-spinners": "^0.13.4",
     "styled-components": "^5.3.5",
     "yup": "^0.32.11"
