applying newest changes

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 LOGIN_URL=https://dev-api.leaguesofcode.com/api/v1/std/login
-GRAPHQL_URL="https://dev-api.leaguesofcode.com"
+GRAPHQL_URL="http://95.217.203.101:8000"
 NEXTAUTH_URL=http://localhost:3000/
 NEXTAUTH_SECRET=A235DSA&*4
 NODE_ENV=development
