--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
-LOGIN_URL=
-GRAPHQL_URL=
-NEXTAUTH_URL=
-NEXTAUTH_SECRET=
-NODE_ENV=
+LOGIN_URL="https://dev-api.leaguesofcode.com/api/v1/std/login"
+GRAPHQL_URL="http://95.217.203.101:8000"
+NEXTAUTH_SECRET="A235DSA&*4"
+NEXTAUTH_URL="https://dev-student.leaguesofcode.com/"
+NODE_ENV="production"
