--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,6 @@
 LOGIN_URL=https://dev-api.leaguesofcode.com/api/v1/std/login
+REQUEST_PASS_RESET_URL=https://dev-api.leaguesofcode.com/api/v1/password/email
+PASS_RESET_URL=https://dev-api.leaguesofcode.com/api/v1/password/reset
 GRAPHQL_URL="http://95.217.203.101:8000"
 NEXTAUTH_URL=http://localhost:3000/
 NEXTAUTH_SECRET=A235DSA&*4
